--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,3 +1,36 @@
+.about-page {
+  display: flex;
+  width: 100%;
+  will-change: contents;
+  height: 100vh;
+  min-height: 566px;
+  margin: 0 auto;
+  z-index: 1;
+  transform-style: preserve-3d;
+  animation: fadeIn 1s forwards;
+  animation-delay: 1s;
+
+  .text-zone {
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40%;
+    max-height: 90%;
+    h1{
+    color: #FFD966;
+    font-size: 53px;
+    margin: 0;
+    font-family: 'Coolvetica';
+    font-weight: 400;
+    }
+    p {
+      font-size: 20px;
+      color: azure;
+    }
+  }
+}
+
 .stage-cube-cont {
   width: 50%;
   height: 100%;
