--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,36 +1,66 @@
-.contact-form {
+.contact-page {
+  position: relative;
   width: 100%;
-  margin-top: 400px;
+  will-change: contents;
+  height: 100vh;
+  min-height: 566px;
+  margin: 0 auto;
+  z-index: 1;
+  transform-style: preserve-3d;
+  animation: fadeIn 1s forwards;
+  animation-delay: 1s;
+
+  .text-zone {
+    position: absolute;
+    left: 10%;
+    top: 20%;
+    transform: translateY(-50%);
+    width: 30%;
+    max-height: 90%;
+    h1{
+    color: #FFD966;
+    font-size: 53px;
+    margin: 0;
+    font-family: 'Coolvetica';
+    font-weight: 400;
+    }
+    p {
+      font-size: 20px;
+      color: azure;
+    }
+  }
+
+.contact-form {
+  position: absolute;
+  right: 0;
+  top: 20%;
+  width: 50%;
+  display: flex;
 
   ul {
+    min-width: 400px;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction:column;
 
     li {
-      padding: 0;
-      margin: 0;
+      width: 100%;
       list-style: none;
       margin-bottom: 10px;
-      opacity: 0;
-      overflow: hidden;
-      display: block;
-      clear: both;
-      position: relative;
+      position: relative; 
       animation: fadeInUp 2s 2s;
       animation-fill-mode: forwards;
     }
 
-    li.half {
-      width: 49%;
-      margin-left: 2%;
-      float: left;
-      clear: none;
-
-      &:first-child {
-        margin-left: 0;
-      }
+    li.left {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      justify-content: space-between;
     }
   }
+
 
   input[type='text'],
   input[type='email'] {
@@ -58,10 +88,10 @@
 
   .flat-button {
     color: #ffd700;
-    font-size: 11px;
+    font-size: 15px;
     letter-spacing: 3px;
     text-decoration: none;
-    padding: 8px 10px;
+    padding: 8px 12px;
     border: 1px solid #ffd700;
     float: left;
     border-radius: 4px;
@@ -70,5 +100,12 @@
     float: right;
     text-align: center;
     margin-right: 10px;
+    &:hover {
+      background-color: #ffd700;
+      color: #fff;
+    }
   }
 }
+}
+
+
