--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -1,47 +1,45 @@
 .nav-bar {
-  background-color: #222222;
-  width: 60px;
-  height: 100vh;
-  position: absolute;
+  background-color: #17223B;
+  width: 100vw;
+  height: 55px;
+  position: sticky;
   top: 0;
   z-index: 3;
-  min-height: 500px;
-  opacity: 0.8;
+  opacity: 0.9;
+  display: flex;
 
   .logo {
-    display: block;
-    padding: 8px 0;
+    display: flex;
+    padding: 8px 10px;
+  align-items: center;
+  justify-content: center;
   
     img {
-      display: block;
-      margin: 8px auto -20px;
       width: 35px;
       height: auto;
-    
-      &.sub-logo{
-           width: 60px;
-      }
+      object-fit: cover;
     }
     }
 }
 
 nav {
-  display: block;
-  text-align: center;
-  position: absolute;
-  height: 210px;
-  top: 50%;
-  margin-top:-120px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 100px;
+  height: 100%;
   width: 100%;
+  margin: 5px 450px;
 
   a {
-      font-size: 22px;
+      font-size: 30px;
       color: #707076;
       display: block;
       line-height: 50px;
       height: 50px;
       position: relative;
       text-decoration: none;
+      cursor: pointer;
      
       i {
          transition: all 0.3s ease-out;
@@ -60,7 +58,7 @@ nav {
 
       &::after{
         content:'';
-        font-size: 9px;
+        font-size: 18px;
         letter-spacing: 2px;
         position: absolute;
         bottom: 0;
@@ -98,21 +96,19 @@ nav {
   }
 }
 ul {
-  position: absolute;
-  bottom: 40px;
+ display: flex;
   width: 100%;
-  display: block;
   padding: 0;
   list-style: none;
   text-align: center;
-  margin: 0;
+  margin: 20px -60px 20px;
+  gap: 13px;
 
   li {
     a{
-      padding:7px 0;
       display: block;
-      font-size: 16px;
-      line-height: 16px;
+      font-size: 23px;
+      line-height: 20px;
     }
     a:hover svg {
       color: #FFD966;
