--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,12 @@ html {
 
 body {
   margin: 0;
+  box-sizing: border-box;
   font: 300 11px/1.4 'Helvetica Neue','san-serif';
   color: #444;
-  background:#41644A;
+  background:#263859;
   overflow: hidden;
+  overflow-y: scroll;
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
