--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -28,7 +28,7 @@
   }
   .demo {
     display: flex;
-    gap: 20px;
+    gap: 80px;
     width: 80%;
     height: 100%;
     top: 20%;
@@ -36,21 +36,30 @@
     right: 0;
     overflow: hidden;
     flex-wrap: wrap;
+    border: 1px solid #fff;
+    padding: 0;
     .card {
-      display: flex;
+      border: 1px solid #fff;
+      width: 280px;
+      height: 200px;
       .image {
+        border: 1px solid #fff;
         display: flex;
-        width: 230px;
-        height: 350px;
-        overflow: hidden;
+        width: 100%;
+        height: 100%;
         justify-content: center;
         text-decoration: none;
         flex-direction: column;
         align-items: center;
-        color: #FFD966;
-        font-size: 15px;
+        color: #fff;
         img{
+          min-width: 220px;
+          height: 150px;
           object-fit: cover;
+          box-shadow: 1px 1px 5px #17223B;
+        }
+        h2 {
+          font-size: 13px;
         }
         &:hover {
           transform: scale(1.1);
