--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -30,20 +30,21 @@
     display: flex;
     gap: 80px;
     width: 80%;
-    height: 100%;
+    height: 80%;
     top: 20%;
     position: absolute;
     right: 0;
     overflow: hidden;
     flex-wrap: wrap;
-    border: 1px solid #fff;
     padding: 0;
+    .last {
+      opacity: 0;
+    }
     .card {
-      border: 1px solid #fff;
       width: 280px;
       height: 200px;
+      
       .image {
-        border: 1px solid #fff;
         display: flex;
         width: 100%;
         height: 100%;
@@ -53,7 +54,7 @@
         align-items: center;
         color: #fff;
         img{
-          min-width: 220px;
+          min-width: 260px;
           height: 150px;
           object-fit: cover;
           box-shadow: 1px 1px 5px #17223B;
